Breaking: Upgrade Elasticsearch, Spring and others
Removed support for dstu3 FHIR format.